--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-  
+
 </head>
 
 <body>
@@ -28,6 +28,9 @@
       <div class="wind">Wind speed: 6.2 km/h</div>
     </div>
   </div>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXnPBECfrcfcgI9xBpAze9_VkRbplmosI&callback=initMap"></script>
   <script src="assets/js/script.js" defer></script>
 </body>
 
