--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     </div>
     <div class="weather loading">
       <h2 class="city">Weather in Mumbai</h2>
-      <h1 class="temp">27°C</h1>
+      <h1 class="temp">27 <span>°C</span> </h1>
       <div class="flex">
         <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon" />
         <div class="description">Cloudy</div>
       </div>
       <div class="humidity">Humidity: 60%</div>
-      <div class="wind">Wind speed: 6.2 km/h</div>
+      <div class="wind">Wind speed: 6.2 <span>km/h</span> </div>
     </div>
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
