--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather App</title>
+  
+  <link rel="icon" href="assets/img/weather_icon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-
+  <title>JavaScript Weather App</title>
 </head>
 
 <body>
