--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="wind">Wind speed: 6.2 <span id="windspan">km/h</span> </div>
     </div>
   </div>
-  <div data-aos="zoom-in" data-aos-duration="1200" class="card2">
+  <div data-aos="zoom-in" data-aos-duration="2000" class="div">
     <div class="thermometer">
 
       <div class="bar"></div>
