🌡 Added Extended Temperature Info

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <link rel="icon" href="assets/img/weather_icon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div data-aos="zoom-in" data-aos-duration="1200" class="card">
+  <div data-aos="zoom-in" data-aos-duration="1200" class="card1">
     <div class="search">
       <input type="text" class="search-bar" placeholder="Search">
       <button><img src="assets/img/search.svg"></button>
@@ -31,6 +31,17 @@
       <div class="wind">Wind speed: 6.2 <span id="windspan">km/h</span> </div>
     </div>
   </div>
+  <div data-aos="zoom-in" data-aos-duration="1200" class="card2">
+    <div class="thermometer">
+
+      <div class="bar"></div>
+      <div class="circle"></div>
+
+    </div>
+  </div>
+
+
+
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script async defer
