👌 Added Today High And Low Temperature

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
   </div>
   <div data-aos="zoom-in" data-aos-duration="2000" class="card2">
     <div class="thermometer">
-
+      <h5 class="todayhigh">Today High - 27.8</h5>
+      <h5 class="todaylow">Today Low - 27.2</h5>
+      
       <div class="bar"></div>
       <div class="circle"></div>
 
