--- a/assets/Other Files/circularprogressbar.html
+++ b/assets/Other Files/circularprogressbar.html
@@ -4,6 +4,32 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css-circular-prog-bar.css" rel="stylesheet">
+	<title>Document</title>
+</head>
+<body>
+	<div class="progress-circle p10">
+		<span>10%</span>
+		<div class="left-half-clipper">
+		  <div class="first50-bar"></div>
+		  <div class="value-bar"></div>
+		</div>
+	  </div>
+</body>
+</html>
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 		
 		*{
@@ -86,4 +112,4 @@
 	</div>
 </div>
 </body>
-</html>
+</html> -->
