--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   <link rel="icon" href="assets/img/weather_icon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>JavaScript Weather App</title>
 </head>
 
 <body>
-  <div data-aos="zoom-in" data-aos-duration="1200" class="card1">
+  <div data-aos="zoom-in" data-aos-duration="1200" class="card card1">
     <div class="search">
       <input type="text" class="search-bar" placeholder="Search">
       <button><img src="assets/img/search.svg"></button>
@@ -31,7 +33,7 @@
       <div class="wind">Wind speed: 6.2 <span id="windspan">km/h</span> </div>
     </div>
   </div>
-    <div data-aos="zoom-in" data-aos-duration="1200" class="card2">
+    <div data-aos="zoom-in" data-aos-duration="1200" class="card card2">
       <div class="thermometer">
         <h3 class="todayhigh">Max 27.8</h3>
         <h3 class="todaylow">Min 27.2</h3>
