🧐 Added Autofocus On Search Bar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div data-aos="zoom-in" data-aos-duration="1200" class="card1">
     <div class="search">
-      <input type="text" class="search-bar" placeholder="Search">
+      <input type="text" class="search-bar" placeholder="Search" autofocus>
       <button><img src="assets/img/search.svg"></button>
     </div>
     <div class="weather loading">
