--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" href="assets/img/weather_icon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>JavaScript Weather App</title>
@@ -17,7 +18,7 @@
 <body>
   <div data-aos="zoom-in" data-aos-duration="1200" class="card1">
     <div class="search">
-      <input type="text" class="search-bar" placeholder="Search" autofocus>
+      <input type="text" id="autocomplete" class="search-bar" placeholder="Search" autofocus>
       <button><img src="assets/img/search.svg"></button>
     </div>
     <div class="weather loading">
@@ -50,6 +51,8 @@
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXnPBECfrcfcgI9xBpAze9_VkRbplmosI&callback=initMap"></script>
   <script src="assets/js/script.js" defer></script>
+  <script src="//code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script>
     AOS.init();
   </script>
