🎲 Update index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <script type="module" src="assets/js/script.js" defer></script>
 
-  <script src="//code.jquery.com/jquery-1.12.4.js"></script>
+  <!-- <script src="//code.jquery.com/jquery-1.12.4.js"></script> -->
   <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script>
     AOS.init();
