🌱 Made Small Changes To Unnecessary  Areas

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
   <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXnPBECfrcfcgI9xBpAze9_VkRbplmosI&callback=initMap"></script>
+  <!-- <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXnPBECfrcfcgI9xBpAze9_VkRbplmosI&callback=initMap"></script> -->
 
   <script type="module" src="assets/js/script.js" defer></script>
 
