👌 Beautified index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
+  
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,20 +41,18 @@
 
     </div>
   </div>
-
-
-
+  <!-- //Animate On Scroll JS Animation Script -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- JQuery Script -->
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
-  <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
-  <!-- <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXnPBECfrcfcgI9xBpAze9_VkRbplmosI&callback=initMap"></script> -->
-
+  <!-- Chart.JS Script   -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js"></script>
+  <!-- Main Scrip For Webpages -->
   <script type="module" src="assets/js/script.js" defer></script>
-
-  <!-- <script src="//code.jquery.com/jquery-1.12.4.js"></script> -->
+  <!-- JQuery-UI-API Script -->
   <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <!-- Animate On Scroll JS Animation Initialization Script -->
   <script>
     AOS.init();
   </script>
