--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <link rel="icon" href="assets/img/weather_icon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <meta property="og:url" content="https://sumemonty.github.io/JavaScript-Weather-App/" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="JavaScript Weather App" />
+    <meta property="og:description"
+        content="Get The Weather Data For Each Of The 10,000 Cities In The World." />
+    <meta property="og:image" content="https://github.com/SumeMonty/JavaScript-Weather-App/blob/master/assets/img/weather_icon.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:site_name" content="Online Weather App">
+    <meta property="fb:app_id" content="123456789">
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
