--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <meta property="og:title" content="JavaScript Weather App" />
     <meta property="og:description"
         content="Get The Weather Data For Each Of The 10,000 Cities In The World." />
-    <meta property="og:image" content="https://github.com/SumeMonty/JavaScript-Weather-App/blob/master/assets/img/weather_icon.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/SumeMonty/JavaScript-Weather-App/master/assets/img/weather_icon.png" />
     <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="300" />
-    <meta property="og:image:height" content="300" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
     <meta property="og:site_name" content="Online Weather App">
     <meta property="fb:app_id" content="123456789">
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
