--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="JavaScript Weather App" />
     <meta property="og:description"
-        content="Get The Weather Data For Each Of The 10,000 Cities In The World." />
-    <meta property="og:image" content="https://raw.githubusercontent.com/SumeMonty/JavaScript-Weather-App/master/assets/img/weather_icon.png" />
+        content="Get The Weather Data For More Than 9,000 Cities In The World." />
+    <meta property="og:image" content="https://raw.githubusercontent.com/SumeMonty/JavaScript-Weather-App/master/assets/img/weather_icon.jpg" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
