✍ Update index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" href="assets/img/weather_icon.png">
+  <link rel="icon" href="assets/img/weather_icon.jpg">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <meta property="og:url" content="https://sumemonty.github.io/JavaScript-Weather-App/" />
