Updated Unit Change Mechanism

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="weather loading">
         <h2 class="city">Weather in Mumbai</h2>
-        <h1 class="temp">27 <span class="tempspan">°C</span></h1>
+        <h1 class="temp">27 <span class="tempspan">°C </span><span>°F</span></h1>
         <div class="flex">
           <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon" />
           <div class="description">Cloudy</div>
